# paraview-glance

./: package-lock.json  package.json  webpack.config.js
src/: app.js
src/components/controls/ColorBy/: template.html
src/components/controls/Information/FieldData/: template.html
src/components/controls/Information/ImageData/: template.html
src/components/controls/Information/PolyData/: template.html
src/components/controls/Molecule/: template.html
src/components/controls/Representation/: template.html
src/components/controls/SliceControl/: template.html
src/components/core/AboutBox/: template.html
src/components/core/App/: script.js  template.html
src/components/core/Datasets/: controls.css  style.css  template.html
src/components/core/EditTools/: script.js  template.html
src/components/core/FileLoader/: template.html
src/components/core/GirderBox/: script.js  style.css  template.html
src/components/core/Landing/: template.html
src/components/core/Screenshots/: style.css  template.html
src/components/tools/MeasurementTools/: template.html
src/components/tools/MedianTool/: index.vue  script.js  template.html
src/components/tools/PaintTool/: template.html
src/config/: ColorMaps.js
src/cpp/: CMakeLists.txt  build.sh  hello.cxx
src/cpp/web-build/: hello.js  helloWasm.js
src/io/: GlanceVtkJsReader.js
